[package]
name = "strpipe"
version = "0.2.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = { version = "0.4.22", features = ["std"] }
nix = { version = "0.30.1", features = ["fs"] }
thiserror = "2.0.12"
tokio = { version = "1.45.0", default-features = false, features = ["libc", "macros", "rt-multi-thread"] }
